Fix button alignment in <DialogAdd/>

--- a/assets/sass/components/_form.scss
+++ b/assets/sass/components/_form.scss
@@ -196,13 +196,17 @@ textarea {
   align-items: flex-end;
 
   button {
+    white-space: pre;
     margin-left: var(--input-gutter);
   }
 
   .checkbox,
   .text-field {
-    flex: 1 1 0;
     margin-bottom: 0;
+  }
+
+  .has-remaining-space {
+    flex: 1 1 0;
   }
 }
 
